--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
                             <div class="form-box">
                                 <p>Please fill out our apartment request form</p>
-                                <button class="request-btn btn-lg">APARTMENT REQUEST</button>
+                                <a href="https://goo.gl/forms/X1y5PkwmXEnGUVlk1" class="request-btn btn-lg">APARTMENT REQUEST</a>
                             </div>
                             
                         </section>
