--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="row justify-content-center">
                 <main>
                     <section id="content">
+                        <h1 class="sr-only">Header</h2>
                         <div class="header">
                             <div class="brand-side">
                                 <img src="images/logo-w.png" alt="crum estate" class="img-fluid">
@@ -36,6 +37,7 @@
                         <!-- SERVICES -->
 
                         <section class="service">
+                            <h2 class="sr-only">Services</h2>
                             <div class="container">
                                 <div class="row">
                                     <div class="col">
@@ -189,6 +191,7 @@
                         <!-- END SERVICE -->
 
                         <section class="mid-img">
+                            <h2 class="sr-only">How Crum works</h2>
                             <div class="top-bar">
                                 <span class="text-uppercase"> Allow <span class="f-s-16">CRUM real estate</span> professionals to help you navigate through over 25,000 NYC apartments, condos, co-ops and commercial
                                     properties that are available for lease. Our leasing agents have access to ALL available units in Manhattan, Queens, and
@@ -202,6 +205,7 @@
 
                         <!-- ABOUT SECTION -->
                         <section class="about">
+                            <h2 class="sr-only">About Crum</h2>
                             <div class="row justify-content-center small-well">
                                 <div class="col-md-8">
                                     <div class="big-q">
@@ -219,6 +223,7 @@
                         </section>
 
                         <section class="nyc-fact">
+                            <h2 class="sr-only">Facts</h2>
                             <div class="nyc-img">
                                 <img src="images/nyc-view.jpg" alt="NYC view" class="img-fluid">
                             </div>
@@ -228,6 +233,7 @@
                         </section>
 
                         <section class="form-request">
+                            <h2 class="sr-only">Form Request</h2>
                             <div class="cap-phrase">
                                 <div class="row">
                                     <div class="col-9">
