--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             <div class="cap-phrase">
                                 <div class="row">
                                     <div class="col-9">
-                                        <span class="b-t">Whether you are a</span><span class="s-t">NYC professional,</span>
+                                        <span class="b-t">Whether you are a</span><span class="b-t">NYC professional,</span>
                                     </div>
                                     <div class="col-3">
                                         <div class="prof-img">
@@ -247,7 +247,7 @@
                                 </div>
                                 <div class="rest-cap">
                                     <span>
-                                        tourist or international student. Or maybe you don't have good credit or proof of income. CRUM will show you ALL your options
+                                        Tourist or International Student. Or maybe you don't have good credit or proof of income. CRUM will show you ALL your options
                                         in one place.
                                     </span>
                                 </div>
@@ -255,7 +255,7 @@
 
                             <div class="form-box">
                                 <p>Please fill out our apartment request form</p>
-                                <a href="https://goo.gl/forms/X1y5PkwmXEnGUVlk1" class="request-btn btn-lg">APARTMENT REQUEST</a>
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLScWymqc0-x3pyXqtbbFD7GpX7Q4c--Ugj-3LmhQH3tgg8vs6g/viewform" class="request-btn btn-lg">APARTMENT REQUEST</a>
                             </div>
                             
                         </section>
